PF-266: Fixed text

--- a/app/templates/integrations/ai-support.html
+++ b/app/templates/integrations/ai-support.html
@@ -141,7 +141,7 @@
                                             </div>
                                             <div class="d-flex justify-content-center align-items-center" style="text-align: center;">
                                                 <div>
-                                                    <label class="form-label d-block">Conversation memore
+                                                    <label class="form-label d-block">Conversation memory
                                                         <span class="tooltip-container">
                                                             <span class="tooltip-content">Enable to allow the model to use previous conversation context. Increases token usage.</span>
                                                         </span>
